unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__ApexJobClassName__c.field-meta.xml
<CustomField>
    <fullName>ffct__ApexJobClassName__c</fullName>
    <label>Apex Job Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>