unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__BatchControlRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffct__BatchControlRecordID__c</fullName>
    <label>Batch Control Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>