unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__CurrentChainIndex__c.field-meta.xml
<CustomField>
    <fullName>ffct__CurrentChainIndex__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deprecated: Current Chain Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>