unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__FailedRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffct__FailedRecordID__c</fullName>
    <label>Failed Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>