unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ffct__ProcessName__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>