unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__ProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>ffct__ProgressInformation__c</fullName>
    <label>Progress Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>