unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__SuccessfulRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffct__SuccessfulRecordID__c</fullName>
    <label>Successful Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>