unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/fields/ffct__UseDefaultConstructor__c.field-meta.xml
<CustomField>
    <fullName>ffct__UseDefaultConstructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Constructor</label>
    <type>Checkbox</type>
</CustomField>