unpackaged/main/default/objects/ffct__fflib_BatchProcess__c/listViews/ffct__All.listView-meta.xml
<ListView>
    <fullName>ffct__All</fullName>
    <columns>NAME</columns>
    <columns>ffct__Status__c</columns>
    <columns>ffct__ApexJobClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>